[package]
name = "anchor_stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
# https://github.com/project-serum/anchor/tree/master/spl
anchor-spl = {version = "0.21.0"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
